--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /public/hot
 /public/storage
 /storage/*.key
-app/Providers/AppServiceProvider.php
+/app/Providers/
 .env
 .phpunit.result.cache
 Homestead.json
